openApi change in getUsers. New endpoint to get list of users
