# api/openapi.yaml
@@ -6,7 +6,7 @@ info:
 servers:
   - url: https://api.server.test/v1
 paths:
-  /users:
+  /users/area:
     get:
       operationId: getUsers
       tags:
@@ -36,7 +36,7 @@ paths:
           $ref: "#/components/responses/401"
         404:
           $ref: "#/components/responses/404"
-  /users/list:
+  /users:
     get:
       operationId: getAllUsers
       tags:
